# better-trace

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.MD  README.md  __init__.py  cli.py  pyproject.toml  requirements.txt  secrets.txt
docs/source/: api.md  cli.md  conf.py  faq.md  index.md  installation.md  usage.md
src/: __init__.py  _did_you_mean.py  better_trace.py  betterexcept.py
src/better_trace/: __init__.py  _did_you_mean.py  better_trace.py  cli.py
