[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "better-trace"
version = "0.1.0"
description = "A colorful, context-rich traceback formatter for Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Adamya Mondal"}
]
dependencies = [
    "rich"
]

[project.urls]
Homepage = "https://github.com/8er8/better-trace"
Repository = "https://github.com/8er8/better-trace"
Issues = "https://github.com/8er8/better-trace/issues"