[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "better-trace"
version = "0.2.0"
description = "A colorful, context-rich traceback formatter for Python"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Adamya Mondal" }
]

keywords = [
    "traceback",
    "exceptions",
    "debugging",
    "rich",
    "terminal",
    "developer-tools",
    "error-handling",
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "rich>=13.7.0",
    "typer"
]

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "pytest",
    "build",
    "twine",
]
docs = [
    "sphinx",
    "myst-parser",
    "furo",
    "sphinx-autoapi"
]

[project.scripts]
better-trace = "better_trace.__main__:app"

[project.urls]
Homepage = "https://github.com/8er8/better-trace"
Repository = "https://github.com/8er8/better-trace"
Issues = "https://github.com/8er8/better-trace/issues"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_configs = true